[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Abilities/Attack.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/kubo/kubo_move_sheet.png" type="Texture" id=3]
[ext_resource path="res://src/Abilities/Sheild.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/kubo/kubo_fly_loop_sheet.png" type="Texture" id=5]
[ext_resource path="res://asset/kubo/kubo_fly_start_sheet.png" type="Texture" id=6]
[ext_resource path="res://asset/kubo/kubo_hit_sheet.png" type="Texture" id=7]
[ext_resource path="res://asset/kubo/kubo_idle_sheet.png" type="Texture" id=8]
[ext_resource path="res://asset/sound/Wings_Flapping_(loop).wav" type="AudioStream" id=9]
[ext_resource path="res://asset/sound/Pulling_a_Sword.wav" type="AudioStream" id=10]
[ext_resource path="res://asset/sound/Kid_Attacked.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 90 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 34.4601, 15.9351 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 25.4755, 40.6977 )

[sub_resource type="Animation" id=4]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("kubo_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kubo_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kubo_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("kubo_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kubo_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kubo_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("kubo_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kubo_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kubo_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("kubo_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kubo_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kubo_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("kubo_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kubo_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kubo_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}

[node name="Player" type="KinematicBody2D"]

z_index = 15
z_as_relative = false
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility", "Z Index" ]
JUMP_HEIGHT = 1200
MOVE_SPEED = 500
FLY_SPEED = 200
GRAVITY = 10

[node name="Kubo_Sword" type="Area2D" parent="." index="0"]

position = Vector2( 20.2126, -93.9602 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kubo_Sword" index="0"]

position = Vector2( -0.212601, 13.9602 )
shape = SubResource( 1 )

[node name="Kubo" type="Area2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 20.2126, -93.9602 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kubo" index="0"]

position = Vector2( -2.38574, 94.4746 )
shape = SubResource( 2 )

[node name="attackPositon" type="Position2D" parent="." index="2"]

position = Vector2( 25.5579, -169.396 )

[node name="Attack" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( 459.948, -137.312 )

[node name="kubo_sprite" type="Sprite" parent="." index="4"]

position = Vector2( 23, 0 )
texture = ExtResource( 3 )
hframes = 10
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="5"]

position = Vector2( 16.1663, 38.7606 )
shape = SubResource( 3 )

[node name="camera" type="Camera2D" parent="." index="6"]

position = Vector2( 19.2235, -2.95746 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = -10000000
limit_right = 1920
limit_bottom = 1080
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="Sheild" parent="." index="7" instance=ExtResource( 4 )]

editor/display_folded = true
visible = false
position = Vector2( 22.6223, -42.2183 )

[node name="CollisionShape2D" parent="Sheild/sheild" index="0"]

position = Vector2( -5.43069, 3.30347 )

[node name="anim" type="AnimationPlayer" parent="." index="8"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fly_loop = SubResource( 4 )
anims/fly_start = SubResource( 5 )
anims/hit = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/move = SubResource( 8 )
next/fly_start = "fly_loop"
blend_times = [  ]

[node name="wing_sound" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="sword_pull" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="audio_hit" type="AudioStreamPlayer2D" parent="." index="11"]

stream = ExtResource( 11 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="wings" type="Sprite" parent="." index="12"]

visible = false

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]


[editable path="Sheild"]
